--- a/_cards.scss
+++ b/_cards.scss
@@ -19,10 +19,12 @@
     height: fit-content;
 
 
-    img {
-      width: 50px;
+    svg {
+      width: 3.5rem;
+      height: 3.5rem;
       padding: 0.5rem;
-      filter: invert(50%);
+      fill: $lighter-icon_color;
+      vertical-align: middle;
     }
   }
 
@@ -114,9 +116,10 @@
       }
 
 
-      img {
-        width: 4rem;
-        filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
+      svg {
+        width: 3.5rem;
+        height: 3.5rem;
+        fill: $main-color;
 
         @media (min-width: 768px) and (max-width: 1024px) {
           padding: 0;
@@ -164,7 +167,7 @@
   @include flex-column;
   background-color: $card-bgcolor;
   position: relative;
-  box-shadow: 1px 1px 12px #C18E3C;
+  box-shadow: 1px 1px 12px $main-color;
 
   &__image {
     width: 100%;
@@ -172,6 +175,14 @@
     @media (min-width: 768px) and (max-width: 1024px) {
       height: 40vh;
       object-fit: cover;
+    }
+
+    &--higher {
+      @media (min-width: 1025px) {
+        width: 308px;
+        height: 206px;
+        object-fit: cover;
+      }
     }
   }
 
@@ -185,31 +196,33 @@
     max-width: fit-content;
 
     @media (min-width: 768px) and (max-width: 1024px) {
-      left: 3rem;
-      right: 3rem;
+      left: 50%;
+      transform: translateX(-50%);
       bottom: 24rem;
     }
 
     @media (min-width: 1025px) {
-      bottom: 12rem;
+      bottom: 11rem;
     }
 
-  }
 
 
-  &__stamp img {
-    filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
-    width: 4rem;
-    padding: 0.5rem;
-  }
 
-  .card__stamp--upper {
+    svg {
+      width: 4.5rem;
+      height: 4.5rem;
+      fill: $main-color;
+      padding: 0.5rem;
+    }
+
+    
+  &--upper {
     background-color: $main-color;
     bottom: 12rem;
 
     @media (min-width: 768px) and (max-width: 1024px) {
-      bottom: 20rem;
-      left: 1rem;
+      bottom: 24rem;
+      left: 3rem;
       right: auto;
     }
 
@@ -220,10 +233,11 @@
 
 
 
-    img {
-      filter: invert(1);
-      width: 5rem;
+    svg {
+      fill: $lighter-icon_color;
     }
+  }
+
   }
 
   &__text {
@@ -347,7 +361,7 @@
   background-color: $card-bgcolor;
   padding: 2rem;
   font-family: $primary-font;
-  box-shadow: 1px 1px 12px #C18E3C;
+  box-shadow: 1px 1px 12px $main-color;
 
   .customer__info {
     display: flex;
