--- a/_cards.scss
+++ b/_cards.scss
@@ -177,12 +177,8 @@
       object-fit: cover;
     }
 
-    &--higher {
-      @media (min-width: 1025px) {
-        width: 308px;
-        height: 206px;
-        object-fit: cover;
-      }
+    @media(min-width:1025px){
+      height: 100%;
     }
   }
 
@@ -215,28 +211,28 @@
       padding: 0.5rem;
     }
 
-    
-  &--upper {
-    background-color: $main-color;
-    bottom: 12rem;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      bottom: 24rem;
-      left: 3rem;
-      right: auto;
-    }
-
-    @media (min-width: 1025px) {
+    &--upper {
+      background-color: $main-color;
       bottom: 12rem;
-      left: 0.5rem;
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        bottom: 24rem;
+        left: 3rem;
+        right: auto;
+      }
+
+      @media (min-width: 1025px) {
+        bottom: 12rem;
+        left: 0.5rem;
+      }
+
+
+
+      svg {
+        fill: $lighter-icon_color;
+      }
     }
-
-
-
-    svg {
-      fill: $lighter-icon_color;
-    }
-  }
 
   }
 
