--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -27,13 +27,13 @@ li {
   padding: 1rem;
   font-size: 0.8rem;
   font-weight: 600;
-  border: none;
+  border: 1px solid transparent;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.5s;
   border-radius: 10px;
 
   &:hover {
-    opacity: 0.6;
+    transform: scale(0.9);
   }
 
   &--big {
@@ -57,6 +57,84 @@ li {
   }
 
 }
+
+.backdrop {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 15;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7)
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  text-align: center;
+  padding: 1.5rem;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 20;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/legal-advicer.webp);
+  background-position: center;
+  background-size: cover;
+  width: 50%;
+  border: 2px solid $main-color;
+  border-radius: 3px;
+  animation: moveUP 1.5s ease;
+
+  @keyframes moveUP {
+    0% {
+      //opacity: 0;
+      top: 100%;
+    }
+
+    100% {
+      //opacity: 1;
+      top: 50%;
+    }
+  }
+
+  h1 {
+    font-family: $secondary-font;
+    font-weight: 600;
+    font-size: 1.5rem;
+    padding: 1rem 0rem;
+    text-transform: uppercase;
+    color: $dark-behind_color;
+  }
+
+  .affirmative {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: 0.5s;
+
+    &:hover {
+      border: 1px solid $main-color;
+      background-color: $secondary-bgcolor;
+      color: $main-color;
+      transform: unset;
+    }
+  }
+
+  .negative {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: 0.5s;
+
+    &:hover {
+      border: 1px solid $main-color;
+      background-color: $secondary-bgcolor;
+      color: $main-color;
+      transform: unset;
+    }
+  }
+}
+
 
 .header {
   @include flex-column;
@@ -233,7 +311,11 @@ li {
       filter: invert(100%);
       display: none;
 
-      &.search-active{
+      @media (max-width: 1025px) {
+        @include appear-animation;
+      }
+
+      &.search-active {
         display: flex;
       }
     }
@@ -243,6 +325,10 @@ li {
     gap: 1rem;
     padding: 1rem 0rem;
     display: none;
+
+    @media (max-width: 1025px) {
+      @include appear-animation;
+    }
 
     &.menu-open {
       @include flex-column;
@@ -311,6 +397,10 @@ li {
       font-weight: 500;
       padding-top: 1.5rem;
     }
+  }
+
+  .button {
+    width: fit-content;
   }
 }
 
@@ -504,6 +594,7 @@ li {
 
 .form__container {
   background-color: $card-bgcolor;
+  border: 2px solid $main-color;
 
   @media (min-width: 1025px) {
     width: 50%;
@@ -785,6 +876,11 @@ footer {
           background-color: $main-color;
           border-radius: 50%;
           padding: 0.3rem 0.6rem;
+          transition: 0.5s;
+
+          &:hover {
+            transform: translateY(-0.5rem);
+          }
         }
 
         svg {
