--- a/style.scss
+++ b/style.scss
@@ -115,7 +115,7 @@ li {
 
     &:hover {
       border: 1px solid $main-color;
-      background-color: $secondary-bgcolor;
+      background-color: transparent;
       color: $main-color;
       transform: unset;
     }
@@ -128,7 +128,7 @@ li {
 
     &:hover {
       border: 1px solid $main-color;
-      background-color: $secondary-bgcolor;
+      background-color: transparent;
       color: $main-color;
       transform: unset;
     }
@@ -637,6 +637,7 @@ li {
         flex-direction: column;
         background-color: $secondary-bgcolor;
 
+
         label {
           color: $main-color;
           font-weight: 500;
@@ -651,9 +652,14 @@ li {
           font-weight: 500;
           font-family: $primary-font;
           color: $paragraph_color;
-        }
 
+          &:focus-visible {
+            outline: 2px solid $main-color;
+          }
+        }
       }
+
+
 
       .full__width__desktop {
         width: 100%;
