--- a/_cards.scss
+++ b/_cards.scss
@@ -6,18 +6,19 @@
   gap: 2rem;
   background-color: $tertiary-bgcolor;
   padding: 2rem;
+  height: fit-content;
+  min-height: 8rem;
+  min-width: 0;
 
   @media (min-width: 768px) and (max-width: 1024px) {
     width: 48%;
   }
-
 
   &__image {
     background-color: $primary-bgcolor;
     border-radius: 50%;
     padding: 0.5rem;
     height: fit-content;
-
 
     svg {
       width: 3.5rem;
@@ -52,7 +53,6 @@
         }
       }
 
-
       &--footer {
         color: $paragraph_color;
         font-weight: 600;
@@ -65,19 +65,12 @@
       }
     }
 
-
-
     &__description {
       font-family: $primary-font;
       color: $main-color;
       font-weight: 600;
       font-size: 0.8rem;
       text-transform: uppercase;
-
-      @media (min-width: 1025px) {
-        text-wrap: nowrap;
-      }
-
 
       &--gray {
         color: $paragraph_color;
@@ -86,10 +79,6 @@
 
         @media (min-width: 768px) {
           font-size: 1rem;
-        }
-
-        @media (min-width: 1025px) {
-          text-wrap: wrap;
         }
       }
     }
@@ -105,8 +94,6 @@
       width: 90%;
     }
 
-
-
     .simple-card__image--lighter {
       background-color: $perfomance-image_bgcolor;
 
@@ -114,7 +101,6 @@
         display: flex;
         height: fit-content;
       }
-
 
       svg {
         width: 3.5rem;
@@ -125,7 +111,6 @@
           padding: 0;
         }
       }
-
     }
   }
 
@@ -162,7 +147,6 @@
   }
 }
 
-
 .card {
   @include flex-column;
   background-color: $card-bgcolor;
@@ -177,11 +161,10 @@
       object-fit: cover;
     }
 
-    @media(min-width:1025px){
+    @media (min-width: 1025px) {
       height: 100%;
     }
   }
-
 
   &__stamp {
     position: absolute;
@@ -201,16 +184,12 @@
       bottom: 11rem;
     }
 
-
-
-
     svg {
       width: 4.5rem;
       height: 4.5rem;
       fill: $main-color;
       padding: 0.5rem;
     }
-
 
     &--upper {
       background-color: $main-color;
@@ -227,13 +206,10 @@
         left: 0.5rem;
       }
 
-
-
       svg {
         fill: $lighter-icon_color;
       }
     }
-
   }
 
   &__text {
@@ -264,7 +240,6 @@
     width: 25%;
   }
 
-
   &__bg {
     width: 100%;
     position: relative;
@@ -276,7 +251,7 @@
     img {
       width: 100%;
 
-      @media (min-width:768px) and (max-width:1024px) {
+      @media (min-width: 768px) and (max-width: 1024px) {
         height: 40vh;
         object-fit: cover;
       }
@@ -302,17 +277,16 @@
 
     &:hover {
       img {
-        transition: .5s;
+        transition: 0.5s;
         filter: brightness(0.5);
       }
 
       .card__hover__text {
         opacity: 1;
-        padding-left: .5rem;
-        transition: .5s;
+        padding-left: 0.5rem;
+        transition: 0.5s;
       }
     }
-
 
     &:hover::before {
       @media (min-width: 1025px) {
@@ -336,7 +310,6 @@
       @media (min-width: 1025px) {
         opacity: 0;
       }
-
 
       .card__hover__title {
         font-family: $secondary-font;
@@ -364,7 +337,6 @@
     gap: 0.5rem;
     align-items: center;
     padding-top: 1rem;
-
 
     img {
       width: 5rem;
