--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,6 @@ li {
     background-color: $tertiary-button_bgcolor;
     color: $tertiary-button_color;
   }
-
 }
 
 .backdrop {
@@ -66,7 +65,7 @@ li {
   z-index: 15;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7)
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal {
@@ -79,7 +78,8 @@ li {
   left: 50%;
   transform: translateX(-50%);
   z-index: 20;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/legal-advicer.webp);
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(./images/legal-advicer.webp);
   background-position: center;
   background-size: cover;
   width: 50%;
@@ -135,7 +135,6 @@ li {
   }
 }
 
-
 .header {
   @include flex-column;
   padding: 2rem;
@@ -159,7 +158,6 @@ li {
       order: 1;
       text-align: center;
     }
-
 
     svg {
       width: 3rem;
@@ -187,7 +185,7 @@ li {
       font-weight: bold;
       color: $main-color;
 
-      @media (min-width:768px) {
+      @media (min-width: 768px) {
         font-size: 0.8rem;
         text-wrap: nowrap;
       }
@@ -203,13 +201,10 @@ li {
       align-items: center;
     }
 
-
-
     .box__image {
       background-color: $main-color;
       height: fit-content;
       padding: 0.3rem;
-
 
       svg {
         width: 1.5rem;
@@ -226,7 +221,6 @@ li {
       @media (min-width: 768px) {
         font-size: 0.8rem;
       }
-
 
       span {
         color: $dark-behind_color;
@@ -255,7 +249,6 @@ li {
       order: 2;
     }
   }
-
 }
 
 //Header
@@ -295,7 +288,6 @@ li {
       display: none;
     }
 
-
     img {
       width: 1.5rem;
 
@@ -303,7 +295,6 @@ li {
         width: 1.3rem;
       }
     }
-
 
     &--search {
       top: unset;
@@ -350,6 +341,8 @@ li {
       font-weight: 600;
       transition: 0.4s;
 
+      white-space: nowrap;
+
       @media (min-width: 768px) {
         font-size: 1rem;
         font-weight: 500;
@@ -369,7 +362,9 @@ li {
 //navbar
 
 .introduction {
-  background: linear-gradient(rgba(0, 0, 0, 0.566), rgba(0, 0, 0, 0.566)), url(./images/experience.webp);
+  background: linear-gradient(rgba(0, 0, 0, 0.566), rgba(0, 0, 0, 0.566)),
+    url(./images/experience.webp) no-repeat center center;
+  background-size: cover;
   height: 100vh;
   @include flex-column;
   justify-content: center;
@@ -383,7 +378,6 @@ li {
     @include flex-column;
     gap: 4rem;
     padding: 2.5rem;
-
 
     .introduction__title h1 {
       font-size: 3rem;
@@ -404,33 +398,28 @@ li {
   }
 }
 
-
 .simple__content {
   @include flex-column;
   gap: 1rem;
 
-  @media (min-width:768px) and (max-width: 1024px) {
+  @media (min-width: 768px) and (max-width: 1024px) {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0.5rem;
     justify-content: center;
   }
-}
 
-.simple__content--top {
-  @media (min-width: 1025px) {
-    flex-direction: row;
-    position: absolute;
-    top: 110%;
-    left: 50%;
-    transform: translateX(-50%);
+  &--top {
+    @media (min-width: 1025px) {
+      flex-direction: row;
+      transform: translateY(-120px);
+      max-width: 100%;
+      height: 0;
+      justify-content: center;
+    }
   }
 }
-
 //Primeira Section
-
-
-
 
 .section {
   //todas sections com class section
@@ -441,7 +430,6 @@ li {
   .section__intro {
     @include flex-column;
     align-items: center;
-
 
     &__title {
       font-family: $primary-font;
@@ -460,12 +448,10 @@ li {
       }
     }
   }
-
 }
 
 .section--card {
   background-color: $primary-bgcolor;
-
 
   @media (min-width: 768px) and (max-width: 1024px) {
     padding: 4rem 0rem;
@@ -475,7 +461,7 @@ li {
 .section--black {
   background-color: $primary-bgcolor;
 
-  @media (min-width: 768px) and (max-width:1024px) {
+  @media (min-width: 768px) and (max-width: 1024px) {
     flex-direction: row;
   }
 
@@ -490,13 +476,11 @@ li {
     color: $dark-behind_color;
     text-align: center;
 
-    @media (min-width:768px) {
+    @media (min-width: 768px) {
       width: 50%;
       font-size: 3rem;
     }
-
   }
-
 
   .section__description {
     font-family: $primary-font;
@@ -505,7 +489,7 @@ li {
     text-align: center;
     padding-top: 1rem;
 
-    @media (min-width:768px) and (max-width: 1024px) {
+    @media (min-width: 768px) and (max-width: 1024px) {
       width: 70%;
     }
 
@@ -513,19 +497,15 @@ li {
       width: 50%;
     }
   }
-
-
 }
 
 .about__container {
   @include flex-column;
 
-
   .about__image {
-    @media (min-width:768px) and (max-width: 1024px) {
+    @media (min-width: 768px) and (max-width: 1024px) {
       padding: 0rem 3rem;
     }
-
 
     img {
       width: 100%;
@@ -543,13 +523,12 @@ li {
   }
 }
 
-
 .cards__container {
   @include flex-column;
   padding: 4rem 0;
   gap: 2rem;
 
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     flex-direction: row;
   }
 
@@ -591,7 +570,6 @@ li {
   }
 }
 
-
 .form__container {
   background-color: $card-bgcolor;
   border: 2px solid $main-color;
@@ -626,17 +604,15 @@ li {
       @include flex-column;
       gap: 2rem;
 
-      @media (min-width:1025px) {
+      @media (min-width: 1025px) {
         flex-direction: row;
         flex-wrap: wrap;
       }
-
 
       .box {
         display: flex;
         flex-direction: column;
         background-color: $secondary-bgcolor;
-
 
         label {
           color: $main-color;
@@ -659,8 +635,6 @@ li {
         }
       }
 
-
-
       .full__width__desktop {
         width: 100%;
       }
@@ -668,7 +642,6 @@ li {
       textarea {
         resize: none;
       }
-
 
       .btn {
         background-color: $main-color;
@@ -700,8 +673,6 @@ li {
     padding: 3rem 2rem;
   }
 }
-
-
 
 .reminder {
   background: url(./images/legal-advicer.webp);
@@ -744,7 +715,6 @@ li {
 
     .reminder__text {
       @include flex-column;
-
 
       .reminder__title {
         font-family: $secondary-font;
@@ -815,7 +785,6 @@ footer {
       justify-content: space-around;
     }
 
-
     .social {
       @media (min-width: 768px) {
         display: flex;
@@ -827,10 +796,8 @@ footer {
         width: 25%;
       }
 
-
       &__logo {
         @include flex-column;
-
 
         &__image {
           padding-left: 1rem;
@@ -849,7 +816,6 @@ footer {
               height: 3.5rem;
             }
           }
-
         }
 
         .social__brand__name {
@@ -871,7 +837,6 @@ footer {
         color: $paragraph_color;
         font-size: 1rem;
         padding: 1rem 0;
-
       }
 
       &__media {
@@ -896,7 +861,6 @@ footer {
           vertical-align: middle;
         }
       }
-
     }
 
     .posts__container {
@@ -906,7 +870,6 @@ footer {
       @media (min-width: 768px) and (max-width: 1024px) {
         width: 45%;
       }
-
 
       @media (min-width: 1025px) {
         padding-top: 0;
@@ -932,8 +895,6 @@ footer {
         display: flex;
         justify-content: space-between;
       }
-
-
 
       &__explore {
         @include flex-column;
@@ -982,7 +943,6 @@ footer {
           flex-direction: column;
           gap: 1rem;
 
-
           .contact__us {
             display: flex;
             gap: 1rem;
@@ -991,7 +951,6 @@ footer {
               width: 1.5rem;
               height: 1.5rem;
               fill: $main-color;
-
             }
 
             &__howto {
