--- a/style.scss
+++ b/style.scss
@@ -525,12 +525,9 @@ li {
 
 .cards__container {
   @include flex-column;
+  flex-flow: row wrap;
   padding: 4rem 0;
   gap: 2rem;
-
-  @media (min-width: 768px) {
-    flex-direction: row;
-  }
 
   @media (min-width: 1025px) {
     padding: 4rem 2rem;
