--- a/style.css
+++ b/style.css
@@ -579,12 +579,15 @@ li {
 }
 
 .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 15;
   display: flex;
   flex-direction: column;
   background-color: #262626;
   font-family: "Poppins", sans-serif;
   padding: 2rem 2.5rem;
-  position: relative;
+  box-shadow: 0 5px 10px #0D0D0D;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .navbar {
@@ -596,11 +599,6 @@ li {
     flex-direction: row;
     padding: 1rem;
     justify-content: center;
-    position: absolute;
-    top: 8rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 5;
   }
 }
 .navbar .icon {
@@ -693,9 +691,6 @@ li {
   }
 }
 .navbar__list li a:hover {
-  color: #C18E3C;
-}
-.navbar__list .top {
   color: #C18E3C;
 }
 
