--- a/style.scss
+++ b/style.scss
@@ -254,11 +254,15 @@ li {
 //Header
 
 .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 15;
+
   @include flex-column;
   background-color: $primary-bgcolor;
   font-family: $primary-font;
   padding: 2rem 2.5rem;
-  position: relative;
+  box-shadow: 0 5px 10px $rights-bgcolor;
 
   @media (min-width: 768px) and (max-width: 1024px) {
     padding: 2rem 1rem;
@@ -268,11 +272,6 @@ li {
     flex-direction: row;
     padding: 1rem;
     justify-content: center;
-    position: absolute;
-    top: 8rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 5;
   }
 
   .icon {
@@ -351,10 +350,6 @@ li {
       &:hover {
         color: $main-color;
       }
-    }
-
-    .top {
-      color: $main-color;
     }
   }
 }
