--- a/style.scss
+++ b/style.scss
@@ -739,6 +739,13 @@ li {
 
       .reminder__buttons {
         flex-direction: row;
+        @media (max-width: 540px) {
+          display: flex;
+          flex-flow: column;
+          width: 100%;
+          gap: 0.5rem;
+          padding: 2rem;
+        }
       }
     }
   }
@@ -764,17 +771,15 @@ footer {
 
   .footer__container {
     @include flex-column;
-    padding: 6rem 0.5rem 0rem 0.5rem;
+    padding: 6rem 1rem;
 
     @media (min-width: 768px) and (max-width: 1024px) {
       flex-direction: row;
-      padding: 6rem 1rem 0rem 1rem;
       flex-wrap: wrap;
     }
 
     @media (min-width: 1025px) {
       flex-direction: row;
-      padding: 5rem 3rem;
       justify-content: space-around;
     }
 
@@ -919,14 +924,12 @@ footer {
 
       .footer__nav__questions {
         @include flex-column;
-        padding-bottom: 5rem;
 
         @media (min-width: 768px) and (max-width: 1024px) {
           width: 50%;
         }
 
         @media (min-width: 1025px) {
-          padding-bottom: unset;
           width: 65%;
         }
 
